--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
   </head>
   <body>
     <nav class="navbar navbar-full navbar-dark bg-primary">
     <!-- <a class="navbar-brand" href="#">The Peepal Tree</a> -->
       <ul class="nav navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
@@ -36,13 +37,12 @@
     </nav>
 
     <!-- Jumbotron begins -->
-      <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-      <h1 class="display-3 text-xs-center">The Peepal Tree</h1>
-      <p class="lead text-xs-center">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+      <div class="jumbotron jumbotron-fluid bg-info" id="home">
+      <div class="container text-xs-right">
+      <h1 class="display-3">The Peepal Tree</h1>
+      <p class="lead">The most popular wildlife destination of Karnataka</p>
       </div>
       </div>
-
     <!-- jumbotron ends -->
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
