--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div class="jumbotron jumbotron-fluid bg-info m-b-0" id="home">
       <div class="container">
       <div class="row ">
-      <div class="col-md-6 offset-md-6">
-      <h1 class="display-3">The Peepal Tree</h1>
+      <div class="col-md-6 offset-md-6 col-xs-12">
+      <h1 class="display-4">The Peepal Tree</h1>
       <p class="lead">The most popular wildlife destination of Karnataka</p>
       
         <div class="btn-group p-x-3 m-x-3" role="group" aria-label="Basic example">
@@ -65,17 +65,14 @@
         <div class="col-md-6">
           <img src="https://hd.unsplash.com/uploads/1412862685615b0212e3d/5fcb0a55" alt="..." class="img-fluid">
         </div>
-        <div class="col-md-6 p-y-1">
-          <p class="lead">
+        <div class="col-md-6 m-y-auto p-y-2 p-x-1">
+          <p class="lead p-x-1 text-justify">
   Celebrate life by just being together with nature. The Peepal Tree is located on the banks of magnificent Kabini backwater, surrounded by verdant landscape, endless greens, undisturbed calm and fishing in the wild. Our backwater cottage are spread over 2 acres of serene land close to the forest and water bodies, with 22 well appointed cottages beautifully situated in an elevated position along the back water.
       </p>
     <hr class="m-y-1">
-    <p class="lead">
+    <p class="lead p-x-1 text-justify">
   The cottages on offer are an exotic combination of luxury, contemporary lifestyle and natural beauty, surrounded by the backwaters, wildlife and deep rooted traditions. Our back water side cottages would be an ideal base from which one can explore the outstanding scenery and take advantage of the many activities in the area including fishing, trekking, cycling and meditating in the calm and well laid out tracks on the banks.
     </p>
-    <hr class="m-y-1">
-        <p class="lead">
-  Our cottages are independent and self-sufficient units that offer all the modern comforts and amenities, with utmost priority given to convenience and safety.
         </div>
       </div>
     </div>
